--- a/flame-front/src/static/css/login.css
+++ b/flame-front/src/static/css/login.css
@@ -2,5 +2,12 @@
 	background: "pink";
 	width: "80%";
 	margin: "auto";
-	padding: "4rem";
+	padding: "5rem";
+}
+
+@media (max-width: 600px) {
+	.form {
+		background-color: "red";
+		padding: "3rem";
+	}
 }
